Added dropdown on start for submission types

--- a/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/CodeFileViewer.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/CodeFileViewer.xaml
@@ -28,7 +28,7 @@
                                     Background="#1e1e1e"
                                     Loaded="_fileTxt_Loaded" DataContextChanged="_fileTxt_DataContextChanged" Name="_fileTxt"
                                     ShowLineNumbers="True"
-                                    SyntaxHighlighting="C++"
+                                    SyntaxHighlighting="{Binding SyntaxHighlighting}"
                                     FontFamily="Consolas"
                                     FontSize="10pt" 
                                     IsReadOnly="False"
