--- a/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
@@ -2,12 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CppSubmissionChecker_View"
+             xmlns:conv="clr-namespace:CppSubmissionChecker_View.Converters"
              StartupUri="Windows/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <!--Converters -->
-            <local:BoolToVisibilityConverter x:Key="BoolToVisibility"/>
-            <local:BoolToInvisibilityConverter x:Key="BoolToInvisibility"/>
+            <conv:BoolToVisibilityConverter x:Key="BoolToVisibility"/>
+            <conv:BoolToInvisibilityConverter x:Key="BoolToInvisibility"/>
 
             <!--Colors-->
             <Color x:Key="BackgroundColor" >#1d2d3d</Color>
