--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/MainWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/MainWindow.xaml
@@ -40,6 +40,9 @@
 
             </StackPanel>
             <DockPanel Visibility="{Binding HasData, Converter={StaticResource BoolToVisibility}}" LastChildFill="true" >
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+                    <Button Click="FraudDetection_Click">FD</Button>
+                </StackPanel>
                 <TabControl>
                     <TabItem Header="Submissions">
                         <Grid Width="200">
