Added Batch open Unity projects to initialize all projects before grading

--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/MainWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/MainWindow.xaml
@@ -42,7 +42,9 @@
             <DockPanel Visibility="{Binding HasData, Converter={StaticResource BoolToVisibility}}" LastChildFill="true" >
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
                     <Button Click="FraudDetection_Click">FD</Button>
+                    <Button Command="{Binding SelectedArchive.BatchOpenInUnityCommand}" >Batch Open in Unity</Button>
                 </StackPanel>
+                
                 <TabControl>
                     <TabItem Header="Submissions">
                         <Grid Width="200">
