Updated the Video File viewer to have better UI controls

--- a/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/CodeFileViewer.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/CodeFileViewer.xaml
@@ -47,6 +47,12 @@
                 
             </Grid>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type previewVM:ImageFile_VM}">
+            <Grid>
+                <Image Source="{Binding Path}"/>
+
+            </Grid>
+        </DataTemplate>
     </UserControl.Resources>
     <Grid>
         <TabControl DockPanel.Dock="Left" Name ="_fileTabControl" SelectedItem="{Binding SelectedCodeFile}" ItemsSource="{Binding CodeFiles}" ItemTemplate="{StaticResource _headerTemplate}">
