--- a/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/VideoPlayer.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/UserControls/VideoPlayer.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CppSubmissionChecker_View.UserControls"
+             xmlns:vm="clr-namespace:CppSubmissionChecker_ViewModel.Viewmodels.FilePreview;assembly=CppSubmissionChecker_ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <d:UserControl.DataContext>
+        <vm:MediaFile_VM/>
+    </d:UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -15,31 +19,37 @@
      UnloadedBehavior="Stop" Stretch="Uniform" LoadedBehavior="Manual"
      MediaOpened="Element_MediaOpened" MediaEnded="Element_MediaEnded"/>
 
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" Orientation="Horizontal">
+        <Grid Grid.Row="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
 
             <!-- Play button. -->
-            <Image Source="/Resources/images/play.png" Width="30" Height="30" MouseDown="OnMouseDownPlayMedia" Margin="5" VerticalAlignment="center" />
+            <Button Visibility="{Binding IsPlaying, Converter={StaticResource BoolToInvisibility}}" Width="30" Height="30" Command="{Binding TogglePlayMedia}" Margin="5" VerticalAlignment="center" >
+                <Image Source="/Resources/images/play.png"/>
+            </Button>
 
             <!-- Pause button. -->
-            <Image Source="/Resources/images/pause.png" Width="30" Height="30" MouseDown="OnMouseDownPauseMedia" Margin="5" />
-
-            <!-- Stop button. -->
-            <Image Source="/Resources/images/stop.png" Width="30" Height="30" MouseDown="OnMouseDownStopMedia" Margin="5" />
-
-            <!-- Volume slider. This slider allows a Volume range between 0 and 1. -->
-            <TextBlock Foreground="White" VerticalAlignment="Center" Margin="5"  >Volume</TextBlock>
-            <Slider Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
-       Minimum="0" Maximum="1" Value="0.5" Width="70"/>
-
-            <!-- Volume slider. This slider allows you to change the speed of the media playback. -->
-            <TextBlock Foreground="White" Margin="5"  VerticalAlignment="Center">Speed</TextBlock>
-            <Slider Name="speedRatioSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaSpeedRatio" 
-       Value="1" Width="70" />
+            <Button Visibility="{Binding IsPlaying, Converter={StaticResource BoolToVisibility}}" Width="30" Height="30" Command="{Binding TogglePlayMedia}" Margin="5" VerticalAlignment="center" >
+                <Image Source="/Resources/images/pause.png"/>
+            </Button>
 
             <!-- Seek to slider. Ths slider allows you to jump to different parts of the media playback. -->
-            <TextBlock Foreground="White" Margin="5"  VerticalAlignment="Center">Seek To</TextBlock>
-            <Slider Name="timelineSlider" Margin="5" VerticalAlignment="Center" ValueChanged="SeekToMediaPosition" Width="70"/>
 
-        </StackPanel>
+            <TextBlock Grid.Column="1" Foreground="White" Margin="5"  VerticalAlignment="Center" Text="{Binding CurrentTimeStr}"></TextBlock>
+            <Slider PreviewMouseLeftButtonUp="timelineSlider_MouseUp" PreviewMouseLeftButtonDown="timelineSlider_MouseDown"  Grid.Column="2" Name="timelineSlider" Margin="5" VerticalAlignment="Center" Value="{Binding CurrentMilliseconds, Mode=OneWay}" Maximum="{Binding TotalMilliseconds}"/>
+            <TextBlock Grid.Column="3" Foreground="White" Margin="5"  VerticalAlignment="Center" Text="{Binding TotalTimeStr}"></TextBlock>
+
+            <!-- Volume slider. This slider allows a Volume range between 0 and 1. -->
+            <TextBlock Grid.Column="4" Foreground="White" VerticalAlignment="Center" Margin="5"  >Volume</TextBlock>
+            <Slider Grid.Column="5" Name="volumeSlider" VerticalAlignment="Center" ValueChanged="ChangeMediaVolume" 
+Minimum="0" Maximum="1" Value="0.5" Width="100"/>
+
+        </Grid>
     </Grid>
 </UserControl>
