--- a/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
@@ -87,6 +87,10 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style x:Key="TextboxStyle" TargetType="{x:Type TextBox}">
+                <Setter Property="Background" Value="Black"></Setter>
+                <Setter Property="Foreground" Value="White"></Setter>
+            </Style>
             <Style x:Key="{x:Type Label}" TargetType="{x:Type Label}">
 
                 <Setter Property="Template">
