Added colored items + bugfix in select code button causing crash

--- a/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
@@ -10,6 +10,7 @@
             <conv:BoolToVisibilityConverter x:Key="BoolToVisibility"/>
             <conv:BoolToVisibilityConverter_Collapsed x:Key="BoolToVisibilityCollapse"/>
             <conv:BoolToInvisibilityConverter x:Key="BoolToInvisibility"/>
+            <conv:ScoreToColorBrushConverter x:Key="ScoreToColor"/>
 
             <!--Colors-->
             <Color x:Key="BackgroundColor" >#1d2d3d</Color>
